# agent_imgui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
agent_imgui/: http.cc  http.h  http_transport.cc  http_transport.h  llm_claude.cc  llm_claude.h  llm_gemini.cc  llm_gemini.h  llm_mock.h  llm_panel.cc  llm_panel.h  llm_provider.h  source_search.cc  source_search.h  system_prompt.md  test_runner.cc  test_runner.h  ui_agent.cc  ui_agent.h
agent_imgui/eval/: .gitignore  README.md  run_evals.py  run_evals.sh
agent_imgui/eval/claude_sonnet_4_6/: 000_input.md  001_input.md  002_input.md  003_input.md  004_input.md  005_input.md  006_input.md  007_input.md  008_input.md  009_input.md  010_input.md  011_input.md  012_input.md  013_input.md  014_input.md  015_input.md  016_input.md  017_input.md  018_input.md  019_input.md  020_input.md  021_input.md  022_input.md  023_input.md  024_input.md  025_input.md  026_input.md  027_input.md  028_input.md  029_input.md
cmake/: dependencies.cmake
example/: CMakeLists.txt  main.cc  tool_inspect_ui.cc  tool_inspect_ui.h  tool_run_ui_program.cc  tool_run_ui_program.h  tool_screenshot.cc  tool_screenshot.h
